# docs/reference/openapi.yaml
@@ -147,22 +147,22 @@ components:
       - name
       title: ProtocolInfo
       type: object
-    ScratchResponse:
+    PythonEnvironmentResponse:
       additionalProperties: false
-      description: State of the scratch area.
+      description: State of the Python environment.
       properties:
-        enabled:
-          default: false
-          description: Scratch area state
-          title: Enabled
-          type: boolean
         installed_packages:
           description: List of installed packages
           items:
             $ref: '#/components/schemas/PackageInfo'
           title: Installed Packages
           type: array
-      title: ScratchResponse
+        scratch_enabled:
+          default: false
+          description: Scratch status
+          title: Scratch Enabled
+          type: boolean
+      title: PythonEnvironmentResponse
       type: object
     SourceInfo:
       enum:
@@ -418,21 +418,9 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
       summary: Get Plan By Name
-  /scratch:
+  /python_environment:
     get:
-      description: "Retrieve details about the scratch area.\n\n- **Behavior**:\n\
-        \    - If the scratch configuration is not defined (`None`),\n      an empty\
-        \ `ScratchResponse` object is returned.\n    - If the scratch configuration\
-        \ exists but encounters issues,\n      an exception is logged on the server\
-        \ side,\n      and an empty `ScratchResponse` object is returned.\n    - If\
-        \ the scratch configuration is valid,\n      detailed scratch information\
-        \ is fetched.\n\n- **Returns**:\n    - A `ScratchResponse` object containing\
-        \ the scratch area details.\n    - An empty `ScratchResponse` object\n   \
-        \   if no valid scratch configuration is available.\n\n- **Exceptions**:\n\
-        \    - `RuntimeError`: Raised if an error occurs while retrieving\n      scratch\
-        \ information.\n      These exceptions are logged and handled on the server\
-        \ side."
-      operationId: get_scratch_packages_scratch_get
+      operationId: get_python_environment_python_environment_get
       parameters:
       - in: query
         name: name
@@ -455,7 +443,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ScratchResponse'
+                $ref: '#/components/schemas/PythonEnvironmentResponse'
           description: Successful Response
         '422':
           content:
@@ -463,7 +451,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
-      summary: Get Scratch Packages
+      summary: Get Python Environment
   /tasks:
     get:
       description: 'Retrieve tasks based on their status.
